--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,11 +7,11 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug executable 'rust-seed'",
+            "name": "Debug executable 'bond-rs'",
             "cargo": {
-                "args": ["build", "--bin=rust-seed", "--package=rust-seed"],
+                "args": ["build", "--bin=bond-rs", "--package=bond-rs"],
                 "filter": {
-                    "name": "rust-seed",
+                    "name": "bond-rs",
                     "kind": "bin"
                 }
             },
@@ -19,7 +19,7 @@
             "cwd": "${workspaceFolder}",
             "env": {
                 "RUST_BACKTRACE": "1",
-                "RUST_LOG": "DEBUG,rust_seed=TRACE"
+                "RUST_LOG": "DEBUG,bond_rs=TRACE"
             },
             "internalConsoleOptions": "openOnSessionStart",
             "terminal": "console"
@@ -27,16 +27,16 @@
         {
             "type": "lldb",
             "request": "launch",
-            "name": "Debug unit tests in executable 'rust-seed'",
+            "name": "Debug unit tests in executable 'bond-rs'",
             "cargo": {
                 "args": [
                     "test",
                     "--no-run",
-                    "--bin=rust-seed",
-                    "--package=rust-seed"
+                    "--bin=bond-rs",
+                    "--package=bond-rs"
                 ],
                 "filter": {
-                    "name": "rust-seed",
+                    "name": "bond-rs",
                     "kind": "bin"
                 }
             },
@@ -44,7 +44,7 @@
             "cwd": "${workspaceFolder}",
             "env": {
                 "RUST_BACKTRACE": "1",
-                "RUST_LOG": "DEBUG,rust_seed=TRACE"
+                "RUST_LOG": "DEBUG,bond_rs=TRACE"
             },
             "internalConsoleOptions": "openOnSessionStart",
             "terminal": "console"
@@ -58,7 +58,7 @@
                     "test",
                     "--no-run",
                     "--test=integration_tests",
-                    "--package=rust-seed"
+                    "--package=bond-rs"
                 ],
                 "filter": {
                     "name": "integration_tests",
@@ -69,7 +69,7 @@
             "cwd": "${workspaceFolder}",
             "env": {
                 "RUST_BACKTRACE": "1",
-                "RUST_LOG": "DEBUG,rust_seed=TRACE"
+                "RUST_LOG": "DEBUG,bond_rs=TRACE"
             },
             "internalConsoleOptions": "openOnSessionStart",
             "terminal": "console"
