--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "rust-seed"
+name = "bond-rs"
 # don't change this, it's updated before an actual build by update-version.sh
 version = "0.0.0-development"
 edition = "2024"
@@ -9,7 +9,7 @@ description = "Rust seed application"
 license-file = "LICENSE"
 categories = ["starter", "seed"]
 keywords = ["integrity", "seed", "starter", "docker", "release"]
-repository = "https://github.com/kristof-mattei/rust-seed"
+repository = "https://github.com/kristof-mattei/bond-rs"
 
 [lints.clippy]
 # don't stop from compiling / running
