--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "rust-seed",
+  "name": "bond-rs",
   "version": "0.0.0-development",
   "description": "It's written in Rust!",
   "main": "src/main.rs",
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/kristof-mattei/rust-seed.git"
+    "url": "https://github.com/kristof-mattei/bond-rs.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/kristof-mattei/rust-seed/issues"
+    "url": "https://github.com/kristof-mattei/bond-rs/issues"
   },
-  "homepage": "https://github.com/kristof-mattei/rust-seed#readme",
+  "homepage": "https://github.com/kristof-mattei/bond-rs#readme",
   "devDependencies": {
     "@actions/tool-cache": "2.0.2",
     "prettier": "3.5.2",
